--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,10 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
