feat: Add production deployment support (Netlify + Render)
🎉 Major Updates:

**Dual-Mode Server (server-mcp.js):**
- Auto-detects local vs production environment
- Local: HTTPS with self-signed certificates
- Production: HTTP (Render provides HTTPS)
- Zero code changes needed when deploying

**Smart Frontend (frontend/app.js):**
- Dynamic API URL detection
- Works with localhost and production URLs
- Environment variable support for Netlify

**Deployment Configuration:**
- render.yaml: Complete Render deployment config
- netlify.toml: Netlify settings with API URL configuration
- Health check endpoint for Render monitoring

**Smart Conversation Features:**
- Chatbot asks for missing details instead of guessing
- Validates required fields before creating invoices/quotes/contacts
- Provides helpful examples and guidance

**Enhanced Analytics:**
- Two-step AI process: Fetch data → Analyze with GLM
- Smart sales calculations and insights
- Human-readable responses instead of raw data

**Files Added:**
- server-mcp.js: Production-ready backend server
- mcpClient.js: Xero MCP Server integration
- xeroAuth.js: OAuth 2.0 Client Credentials authentication
- render.yaml: Render deployment configuration
- MCP-*.md: Architecture and implementation docs

**Files Modified:**
- glmClient.js: Enhanced with smart conversation prompts
- frontend/app.js: Dynamic API URL support
- frontend/index.html: Environment variable injection
- netlify.toml: Production deployment settings
- package.json: Updated dependencies

✅ Ready for deployment to Netlify (frontend) + Render (backend)

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,14 @@
 GROQ_API_KEY=your_groq_api_key_here
 
 # ==========================================
+# GLM-4-FLASH API CREDENTIALS
+# ==========================================
+# Get your API key from: https://open.bigmodel.cn/
+GLM_API_KEY=your_glm_api_key_here
+GLM_API_URL=https://open.bigmodel.cn/api/paas/v4/chat/completions
+GLM_MODEL=glm-4.7-flash
+
+# ==========================================
 # XERO OAUTH 2.0 CREDENTIALS
 # ==========================================
 # Get these from: https://developer.xero.com/app/
@@ -21,9 +29,9 @@ XERO_CLIENT_SECRET=your_xero_client_secret_here
 # ==========================================
 # NETLIFY DEPLOYMENT URL
 # ==========================================
-# Replace YOUR_SITE with your actual Netlify site name
-# Example: https://my-xero-chatbot.netlify.app
-XERO_REDIRECT_URI=https://YOUR_SITE.netlify.app/xero/callback
+# For local development, use: https://localhost:3000/xero/callback
+# For Netlify production, replace with: https://YOUR_SITE.netlify.app/xero/callback
+XERO_REDIRECT_URI=https://localhost:3000/xero/callback
 
 # ==========================================
 # XERO API SCOPES
